# EUROBOT22

./: README.md
big_robot/src/: ROS常用功能命令3.0.txt
big_robot/src/aruco_detect/aruco_detect/: CMakeLists.txt  package.xml
big_robot/src/aruco_detect/aruco_detect/msg/: aruco_info.msg  aruco_list.msg
big_robot/src/aruco_detect/aruco_detect/src/: aruco_detect.cpp
big_robot/src/capstone_manipulator/: CMakeLists.txt  package.xml
big_robot/src/capstone_manipulator/src/: LY_kinematics.py  manipulator.py  test_tf.py
big_robot/src/main_controller/: CMakeLists.txt  package.xml
big_robot/src/main_controller/action/: manipulator.action  moving.action
big_robot/src/main_controller/launch/: main.launch  test_grab.launch  test_move.launch  test_vel.launch
big_robot/src/main_controller/recording/: localize_recording.csv  localize_recording2.csv  recording.csv  recording4_28.csv  visual.py
big_robot/src/main_controller/src/: main.py  moving.py  robot_task.py  test_odom.py  test_vel.py
big_robot/src/turn_on_wheeltec_robot/: mrymap.pgm  mrymap.yaml  mrymap2.pgm  mrymap2.yaml
big_robot/src/turn_on_wheeltec_robot/include/: wheeltec_robot.h
big_robot/src/turn_on_wheeltec_robot/launch/: navigation.launch  turn_on_wheeltec_robot.launch
big_robot/src/turn_on_wheeltec_robot/launch/include/: amcl_omni.launch  base_serial.launch
big_robot/src/turn_on_wheeltec_robot/map/: .yaml  WHEELTEC.yaml  mrymap.pgm  mrymap.yaml  mrymap2.pgm  mrymap2.yaml
big_robot/src/turn_on_wheeltec_robot/param_mini_mec/: costmap_common_params.yaml
big_robot/src/turn_on_wheeltec_robot/src/: wheeltec_robot.cpp
